samples/_failures_safe/1761130318_bf911b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_160e01ae.c: In function ‘main’:
./samples/SAFE/__tmp_160e01ae.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     const char* sample
      |     ^~~~~
./samples/SAFE/__tmp_160e01ae.c:145:5: error: expected declaration or statement at end of input
